--- a/cart.html
+++ b/cart.html
@@ -612,7 +612,13 @@
       .stepdesc {
         display: none;
       }
-    }
+    }.rightControls{
+  display:flex;
+  align-items:center;
+  gap:10px;
+  flex-wrap:wrap;
+  justify-content:flex-end;
+}
   </style>
 </head>
 
@@ -1613,8 +1619,7 @@
     `;
 
       // Hide action buttons ONLY on Review
-      const showActions = (view !== "review" && view !== "pay");
-
+      const showActions = (view !== "review");
 
       const actionRow = showActions ? `
       <div class="row2" style="justify-content:flex-end; margin-top:2px;">
@@ -1633,13 +1638,20 @@
           <div class="title">${title}</div>
           ${variantLine}
 
-          <div class="row2">
-            <div>
-              ${priceLabel}
-              ${hint}
-            </div>
-            ${qtyControls}
-          </div>
+<div class="row2">
+  <div>
+    ${priceLabel}
+    ${hint}
+  </div>
+
+  ${
+    (view === "pay" && kind === "paid")
+      ? `<div class="rightControls">${qtyControls}${primaryAction}</div>`
+      : `${qtyControls}`
+  }
+</div>
+
+${(view === "pay" && kind === "paid") ? `` : actionRow}
 
           ${actionRow}
         </div>
