--- a/products/games/index.html
+++ b/products/games/index.html
@@ -565,7 +565,7 @@
                     alt="TimeCat">
                 <h3>TimeCat</h3>
             </a>
-            <a href="/products/squareproduct#the-life-of-a-meatball-jigsaw-puzzle/20"
+            <a href="/products/product#the-life-of-a-meatball-jigsaw-puzzle"
                 class="item-box" data-category="puzzles">
                 <img src="https://unlim8ted.com\images\products\games\image.webp" alt="">
                 <h3>The Life of a Meatball Puzzle</h3>
@@ -586,7 +586,7 @@
                 <img src="https://unlim8ted.com\images\products\games\chess-preview.jpg" alt="">
                 <h3>Chess</h3>
             </a>
-            <a href="/product#life" class="item-box" data-category="card games">
+            <a href="/products/product#life" class="item-box" data-category="card games">
                 <img src="https://unlim8ted.com\images\products\games\life cover.jpeg" alt="">
                 <h3>life</h3>
             </a>
