Optimize script imports and external store check
Refactored script imports and optimized external store check.

--- a/products/physical-items.html
+++ b/products/physical-items.html
@@ -578,31 +578,33 @@
   </div>
 
   <div id="toast" class="toast">Added to cart</div>
+<script type="module">
+  import { doc, getDoc } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js";
+  import { getFirebase } from "/components/firebase-init.js";
 
-  <script type="module">
-    import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
-    import { collection, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js";
-    import { getFirebase } from "/components/firebase-init.js";
-import { initializeApp, getApps } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-    const { auth, db } = getFirebase();
- // Init Firebase (safe if already initialized)
-  const app = getApps().length ? getApps()[0] : initializeApp(firebaseConfig);
+  const { auth, db } = getFirebase();
 
   async function checkExternalStore() {
     try {
-      const ref = doc(db, "external_store", "value");
-      const snap = await getDoc(ref);
-
+      const snap = await getDoc(doc(db, "external_store", "value"));
       if (snap.exists() && snap.data().enabled === true) {
-        window.location.href =
-          "https://unlim8ted-studio-productions.square.site/s/shop";
+        location.replace("https://unlim8ted-studio-productions.square.site/s/shop");
       }
-    } catch (err) {
-      console.error("External store check failed:", err);
+    } catch (e) {
+      console.error("External store check failed:", e);
     }
   }
 
   checkExternalStore();
+</script>
+
+  <script type="module">
+  import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
+  import { collection, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js";
+  import { getFirebase } from "/components/firebase-init.js";
+
+  const { auth, db } = getFirebase();
+ // Init Firebase (safe if already initialized)
     // -----------------------------
     // PRODUCT DATA
     // -----------------------------
