--- a/cart.html
+++ b/cart.html
@@ -81,6 +81,7 @@
       backdrop-filter: blur(12px);
     }
 
+    /* Left */
     .list {
       padding: 14px;
     }
@@ -117,6 +118,7 @@
       color: var(--muted);
     }
 
+    /* Item */
     .item {
       display: grid;
       grid-template-columns: 88px 1fr auto;
@@ -189,6 +191,7 @@
       letter-spacing: .3px;
     }
 
+    /* Qty */
     .qty {
       display: inline-flex;
       align-items: center;
@@ -227,6 +230,7 @@
       font-size: 14px;
     }
 
+    /* Actions */
     .actions {
       display: flex;
       flex-direction: column;
@@ -295,6 +299,7 @@
       background: rgba(255, 255, 255, .08);
     }
 
+    /* Right / Summary */
     .summary {
       padding: 16px;
       position: sticky;
@@ -351,6 +356,128 @@
       font-size: 13px;
     }
 
+    /* Donation block */
+    .donate {
+      margin-top: 14px;
+      padding-top: 12px;
+      border-top: 1px solid rgba(255, 255, 255, .10);
+    }
+
+    .donate-title {
+      font-weight: 950;
+      letter-spacing: .2px;
+      margin-bottom: 8px;
+    }
+
+    .donate-row {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 10px;
+      margin-bottom: 10px;
+    }
+
+    select,
+    input[type="text"] {
+      border-radius: 14px;
+      border: 1px solid rgba(255, 255, 255, .12);
+      background: rgba(10, 8, 18, .72);
+      color: rgba(255, 255, 255, .92);
+      padding: 10px 12px;
+      outline: none;
+      font-weight: 850;
+      width: 100%;
+      box-sizing: border-box;
+    }
+
+    select option {
+      background: #0b0a12;
+      color: rgba(255, 255, 255, .92);
+    }
+
+    /* Modal */
+    .modalOverlay {
+      position: fixed;
+      inset: 0;
+      background: rgba(0, 0, 0, .62);
+      backdrop-filter: blur(10px);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      padding: 18px;
+      z-index: 9999;
+    }
+
+    .modalOverlay.show {
+      display: flex;
+    }
+
+    .modal {
+      width: min(520px, 100%);
+      background: rgba(10, 8, 18, .88);
+      border: 1px solid rgba(180, 130, 255, .28);
+      border-radius: 18px;
+      box-shadow: 0 20px 60px rgba(0, 0, 0, .55);
+      overflow: hidden;
+    }
+
+    .modalHead {
+      padding: 14px 16px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 12px;
+      border-bottom: 1px solid rgba(255, 255, 255, .08);
+      background: rgba(255, 255, 255, .04);
+    }
+
+    .modalTitle {
+      font-weight: 950;
+      letter-spacing: .2px;
+    }
+
+    .modalClose {
+      width: 38px;
+      height: 38px;
+      border-radius: 14px;
+      border: 1px solid rgba(255, 255, 255, .10);
+      background: rgba(255, 255, 255, .05);
+      color: rgba(255, 255, 255, .9);
+      cursor: pointer;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .modalClose:hover {
+      background: rgba(255, 255, 255, .08);
+    }
+
+    .modalBody {
+      padding: 14px 16px;
+      color: rgba(255, 255, 255, .82);
+      line-height: 1.35;
+      font-size: 13px;
+    }
+
+    .modalActions {
+      padding: 14px 16px 16px;
+      display: flex;
+      gap: 10px;
+      justify-content: flex-end;
+      border-top: 1px solid rgba(255, 255, 255, .08);
+    }
+
+    .btn-danger {
+      background: rgba(255, 77, 77, .16);
+      color: rgba(255, 255, 255, .92);
+      border: 1px solid rgba(255, 77, 77, .30);
+    }
+
+    .btn-danger:hover {
+      background: rgba(255, 77, 77, .22);
+      border-color: rgba(255, 77, 77, .38);
+    }
+
     @media (max-width: 900px) {
       .grid {
         grid-template-columns: 1fr;
@@ -372,6 +499,10 @@
         justify-content: space-between;
         align-items: center;
       }
+
+      .donate-row {
+        grid-template-columns: 1fr;
+      }
     }
   </style>
 </head>
@@ -380,6 +511,25 @@
   <site-loader text="Loading..."></site-loader>
   <site-navbar cart-href="/cart" signin-href="https://unlim8ted.com/sign-in"
     profile-href="https://unlim8ted.com/profile"></site-navbar>
+
+  <!-- Modal -->
+  <div id="modalOverlay" class="modalOverlay" aria-hidden="true">
+    <div class="modal" role="dialog" aria-modal="true" aria-labelledby="modalTitle">
+      <div class="modalHead">
+        <div id="modalTitle" class="modalTitle">Confirm</div>
+        <button id="modalClose" class="modalClose" type="button" aria-label="Close">
+          <svg viewBox="0 0 24 24" fill="none" aria-hidden="true" style="width:18px;height:18px;">
+            <path d="M6 6l12 12M18 6 6 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+          </svg>
+        </button>
+      </div>
+      <div id="modalBody" class="modalBody"></div>
+      <div class="modalActions">
+        <button id="modalCancel" class="btn btn-ghost" type="button">Cancel</button>
+        <button id="modalConfirm" class="btn btn-danger" type="button">Confirm</button>
+      </div>
+    </div>
+  </div>
 
   <div class="wrap">
     <div class="topbar">
@@ -428,6 +578,34 @@
         <div class="helper" style="margin-top:12px;">
           Free items show as <strong>FREE</strong>. If Square requires a paid checkout, only paid items will be charged.
         </div>
+
+        <!-- Donation (re-added) -->
+        <div class="donate">
+          <div class="donate-title">Support Unlim8ted</div>
+          <div class="donate-row">
+            <select id="donateFreq" aria-label="Donation frequency">
+              <option value="one_time">One-time</option>
+              <option value="weekly">Weekly</option>
+              <option value="monthly">Monthly</option>
+              <option value="annual">Annual</option>
+            </select>
+
+            <select id="donateAmount" aria-label="Donation amount">
+              <option value="custom">Custom</option>
+              <option value="1">$1</option>
+              <option value="5">$5</option>
+              <option value="10">$10</option>
+            </select>
+          </div>
+
+          <button id="donateBtn" class="btn btn-ghost" type="button">
+            Donate via Square
+          </button>
+
+          <div class="helper" style="margin-top:10px;">
+            Donations open in a secure Square page.
+          </div>
+        </div>
       </div>
     </div>
 
@@ -452,6 +630,21 @@
     const QS = new URLSearchParams(location.search);
     const BUY_MODE = (QS.get("source") || "").toLowerCase() === "buy";
     const BUY_PRODUCT = String(QS.get("product") || "").trim();
+
+    /* =============================
+       Donation links (re-added)
+    ============================= */
+    const SQUARE_DONATION = {
+      one_time: {
+        custom: "https://square.link/u/h4bY1vEF",
+        "1": "https://square.link/u/bWytGN4p",
+        "5": "https://square.link/u/4XBSzfLg",
+        "10": "https://square.link/u/AvF6x51S",
+      },
+      weekly: { custom: "https://square.link/u/FkJZDx1R" },
+      monthly: { custom: "https://square.link/u/ZK2wPwwU" },
+      annual: { custom: "https://square.link/u/ypx1lQj1" }, // If you don't have annual, replace/remove.
+    };
 
     /* =============================
        products.json cache/index
@@ -549,6 +742,56 @@
       el.innerHTML = "";
     }
 
+    /* =============================
+       Modal (no alerts)
+    ============================= */
+    const modalOverlay = document.getElementById("modalOverlay");
+    const modalTitle = document.getElementById("modalTitle");
+    const modalBody = document.getElementById("modalBody");
+    const modalClose = document.getElementById("modalClose");
+    const modalCancel = document.getElementById("modalCancel");
+    const modalConfirm = document.getElementById("modalConfirm");
+    let _modalResolver = null;
+    let _lastFocus = null;
+
+    function openModal({ title = "Confirm", bodyHtml = "", confirmText = "Confirm", confirmClass = "btn btn-danger" } = {}) {
+      modalTitle.textContent = title;
+      modalBody.innerHTML = bodyHtml;
+      modalConfirm.textContent = confirmText;
+      modalConfirm.className = confirmClass;
+      modalOverlay.classList.add("show");
+      modalOverlay.setAttribute("aria-hidden", "false");
+      _lastFocus = document.activeElement;
+      setTimeout(() => modalConfirm.focus(), 0);
+
+      return new Promise(resolve => {
+        _modalResolver = resolve;
+      });
+    }
+
+    function closeModal(result) {
+      modalOverlay.classList.remove("show");
+      modalOverlay.setAttribute("aria-hidden", "true");
+      const r = _modalResolver;
+      _modalResolver = null;
+      if (typeof r === "function") r(result);
+      if (_lastFocus && typeof _lastFocus.focus === "function") _lastFocus.focus();
+    }
+
+    modalClose.addEventListener("click", () => closeModal(false));
+    modalCancel.addEventListener("click", () => closeModal(false));
+    modalConfirm.addEventListener("click", () => closeModal(true));
+    modalOverlay.addEventListener("click", (e) => {
+      if (e.target === modalOverlay) closeModal(false);
+    });
+    document.addEventListener("keydown", (e) => {
+      if (!modalOverlay.classList.contains("show")) return;
+      if (e.key === "Escape") closeModal(false);
+    });
+
+    /* =============================
+       Catalog resolution
+    ============================= */
     function resolveProductImage(productId, variantId) {
       const pid = String(productId || "").trim();
       if (!pid) return "";
@@ -625,12 +868,10 @@
       const key = String(keyRaw || "").trim().toLowerCase();
       if (!key) return null;
 
-      // Try exact id match first
       for (const [pid, p] of _productById.entries()) {
         if (String(pid).toLowerCase() === key) return p;
       }
 
-      // Try common fields
       for (const p of (_productsArray || [])) {
         const candidates = [
           p.id, p.productId, p.slug, p.handle, p.key, p.shortId,
@@ -639,7 +880,6 @@
         if (candidates.includes(key)) return p;
       }
 
-      // Try loose "contains"
       for (const p of (_productsArray || [])) {
         const name = String(p.name || p.title || "").trim().toLowerCase();
         if (name && name.replace(/\s+/g, "") === key.replace(/\s+/g, "")) return p;
@@ -651,7 +891,6 @@
     function pickDefaultVariant(product) {
       const vars = Array.isArray(product?.varients) ? product.varients : (Array.isArray(product?.variants) ? product.variants : []);
       if (!vars.length) return null;
-      // Prefer first that has an id
       for (const v of vars) {
         const vid = String(v?.id ?? v?.variantId ?? "").trim();
         if (vid) return v;
@@ -690,7 +929,6 @@
       renderCart();
     }
 
-    // Only attach once (your previous version attached inside onAuthStateChanged)
     window.addEventListener("cart-changed", () => {
       if (BUY_MODE) return;
       if (!currentUser) emitCart(getLocalCart());
@@ -701,8 +939,7 @@
         currentUser = user || null;
 
         if (unsubCart) { unsubCart(); unsubCart = null; }
-
-        if (BUY_MODE) return; // buy-mode ignores Firestore/local cart
+        if (BUY_MODE) return;
 
         if (!user) {
           emitCart(getLocalCart());
@@ -736,8 +973,8 @@
     ============================= */
     async function setQty(id, qty) {
       qty = Math.max(1, qty | 0);
+
       if (BUY_MODE) {
-        // Single-item buy mode: just update in-memory
         const idx = cartItems.findIndex(x => String(x.id) === String(id));
         if (idx >= 0) {
           cartItems[idx].qty = qty;
@@ -806,14 +1043,25 @@
     }
 
     function buildWorkerItemsFromCart(allItems) {
-      // Only paid items with a Square variationId (variantId)
       return (allItems || [])
         .map(it => ({
+          id: String(it.id || ""),
+          title: String(it.title || it.name || "Item"),
           variationId: String(it.variantId || "").trim(),
           quantity: Math.max(1, Number(it.qty) || 1),
-          price: normalizePriceNumber(parsePrice(it.price)) || 0
+          price: normalizePriceNumber(parsePrice(it.price)) || 0,
+          accessUrl: safeUrl(it.accessUrl)
+        }));
+    }
+
+    function findPaidMissingVariant(allItems) {
+      return (allItems || [])
+        .map(it => ({
+          title: String(it.title || it.name || "Item"),
+          price: normalizePriceNumber(parsePrice(it.price)) || 0,
+          variationId: String(it.variantId || "").trim()
         }))
-        .filter(x => x.variationId && (x.price > 0));
+        .filter(x => x.price > 0 && !x.variationId);
     }
 
     async function workerCreateCheckout(payload) {
@@ -836,9 +1084,43 @@
         return;
       }
 
-      const items = buildWorkerItemsFromCart(cartItems);
+      // BUY mode free item: open link instead of Square
+      if (BUY_MODE && cartItems.length === 1) {
+        const it = cartItems[0];
+        const price = normalizePriceNumber(parsePrice(it.price)) || 0;
+        const url = safeUrl(it.accessUrl);
 
-      if (!items.length) {
+        if (price <= 0 && url) {
+          setNotice("ok",
+            `<div style="display:flex;gap:10px;align-items:flex-start">
+              <svg viewBox="0 0 24 24" fill="none" aria-hidden="true" style="width:18px;height:18px;margin-top:2px;">
+                <path d="M20 6 9 17l-5-5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+              <div><strong>Opening your free item…</strong></div>
+            </div>`
+          );
+          window.open(url, "_blank", "noopener,noreferrer");
+          return;
+        }
+      }
+
+      // Block checkout if any PAID items are missing Square variationId
+      const missing = findPaidMissingVariant(cartItems);
+      if (missing.length) {
+        setNotice("warn",
+          `<strong>Some paid items can’t be checked out yet.</strong><br/>
+           These need a Square variationId in products.json:<br/>
+           <div style="margin-top:6px;opacity:.9">${missing.map(m => `• ${escapeHtml(m.title)}`).join("<br/>")}</div>`
+        );
+        return;
+      }
+
+      const built = buildWorkerItemsFromCart(cartItems);
+      const paidItems = built
+        .filter(x => x.variationId && x.price > 0)
+        .map(x => ({ variationId: x.variationId, quantity: x.quantity }));
+
+      if (!paidItems.length) {
         setNotice("ok", `<strong>No paid items.</strong> Nothing to pay for. Your free items are ready.`);
         return;
       }
@@ -853,7 +1135,7 @@
             ? `buy-${BUY_PRODUCT}-${Date.now()}-${Math.random().toString(16).slice(2)}`
             : `cart-${Date.now()}-${Math.random().toString(16).slice(2)}`,
           currency: "USD",
-          items: items.map(x => ({ variationId: x.variationId, quantity: x.quantity })),
+          items: paidItems,
           context: {
             uid: currentUser?.uid || null,
             mode: BUY_MODE ? "buy" : "cart",
@@ -975,7 +1257,17 @@
       document.getElementById("subtotal").textContent = money(subtotal);
       document.getElementById("total").textContent = money(subtotal);
 
-      document.getElementById("checkoutBtn").disabled = cartItems.length === 0;
+      const checkoutBtn = document.getElementById("checkoutBtn");
+      checkoutBtn.disabled = cartItems.length === 0;
+
+      if (BUY_MODE) {
+        const it = cartItems[0] || null;
+        const price = it ? (normalizePriceNumber(parsePrice(it.price)) || 0) : 0;
+        const url = it ? safeUrl(it.accessUrl) : "";
+        checkoutBtn.textContent = (it && price <= 0 && url) ? "Get free item" : "Checkout";
+      } else {
+        checkoutBtn.textContent = "Checkout";
+      }
 
       const clearBtn = document.getElementById("clearBtn");
       clearBtn.disabled = cartItems.length === 0 || BUY_MODE;
@@ -1023,8 +1315,28 @@
         if (BUY_MODE) return;
         clearNotice();
         if (!cartItems.length) return;
-        if (!confirm("Clear your cart?")) return;
+
+        const ok = await openModal({
+          title: "Clear cart?",
+          bodyHtml: `This will remove <strong>all items</strong> from your cart. This can’t be undone.`,
+          confirmText: "Clear cart",
+          confirmClass: "btn btn-danger"
+        });
+
+        if (!ok) return;
         try { await clearCart(); } catch (err) { console.error(err); }
+        return;
+      }
+
+      if (e.target.closest("#donateBtn")) {
+        const freq = document.getElementById("donateFreq").value;
+        const amt = document.getElementById("donateAmount").value;
+        const url = SQUARE_DONATION?.[freq]?.[amt] || SQUARE_DONATION?.[freq]?.custom || "";
+        if (!url) {
+          setNotice("warn", `<strong>Donation link missing.</strong> Update SQUARE_DONATION in this page.`);
+          return;
+        }
+        window.open(url, "_blank", "noopener,noreferrer");
         return;
       }
     });
@@ -1065,33 +1377,46 @@
       const v = pickDefaultVariant(p);
       const vid = String(v?.id ?? v?.variantId ?? "").trim();
 
-      // IMPORTANT: paid checkout requires a Square variation id
-      if (!vid) {
+      const price = normalizePriceNumber(parsePrice(v?.price ?? p?.price)) || 0;
+      const accessUrl = p.accessUrl ?? p.downloadUrl ?? p.url ?? p.link ?? null;
+
+      // paid items require Square variation id
+      if (price > 0 && !vid) {
         cartItems = [];
         renderCart();
         setNotice("warn",
-          `<strong>This product can't be purchased yet.</strong><br/>
+          `<strong>This product can’t be purchased yet.</strong><br/>
            Missing Square variant (variationId) in products.json for <strong>${escapeHtml(pid || productKey)}</strong>.`
         );
         return;
       }
 
-      const price = normalizePriceNumber(parsePrice(v?.price ?? p?.price)) || 0;
+      // free items require link
+      if (price <= 0 && !safeUrl(accessUrl)) {
+        cartItems = [];
+        renderCart();
+        setNotice("warn",
+          `<strong>This free item is missing its link.</strong><br/>
+           Add <code>accessUrl</code> (or <code>downloadUrl/url/link</code>) in products.json.`
+        );
+        return;
+      }
+
       const image = resolveProductImage(pid, vid) || safeUrl(p.image || p.imageUrl || "");
       const title = String(p.name || p.title || pid || productKey || "Item").trim();
       const variantLabel = String(v?.name || "").trim();
 
       cartItems = [
         resolveFromCatalog({
-          id: `buy-${pid}-${vid}`,
+          id: `buy-${pid}-${vid || "free"}`,
           productId: pid,
-          variantId: vid,
+          variantId: vid || null,
           title,
           variantLabel,
           price,
           qty: 1,
           image: image || null,
-          accessUrl: p.accessUrl ?? p.downloadUrl ?? p.url ?? p.link ?? null,
+          accessUrl
         })
       ];
 
@@ -1102,12 +1427,10 @@
     /* =============================
        Start
     ============================= */
-    // Footer year
     const y = new Date().getFullYear();
     document.getElementById("footer-text").innerHTML =
       `&copy; 2019-${y} Unlim8ted Studio Productions. All rights reserved.`;
 
-    // Buy mode UI tweaks
     if (BUY_MODE) {
       document.getElementById("pageTitle").textContent = "Checkout";
       document.getElementById("pageSub").textContent = "One item. Adjust quantity, then checkout.";
@@ -1116,13 +1439,9 @@
       document.title = "Unlim8ted - Checkout";
     }
 
-    // Load products early
     loadProducts().catch(() => { });
-
-    // Always watch auth (needed for context.uid) but cart listeners are disabled in BUY_MODE
     startCartData();
 
-    // Init data
     if (BUY_MODE) {
       if (!BUY_PRODUCT) {
         setNotice("warn",
@@ -1136,7 +1455,6 @@
         });
       }
     } else {
-      // regular cart will be rendered via snapshot/local emit
       renderCart();
     }
   </script>
