--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       --accent2: #63d6ff;
       --hot: #ff4d2d;
       --hot2: #ffcc4d;
+--sigilScale: 1;
 
       --p: 0;
       --sparkX: 50vw;
@@ -458,7 +459,7 @@
       overflow: visible;
       filter:
         drop-shadow(0 0 14px rgba(184, 107, 255, .25)) drop-shadow(0 0 calc(22px * var(--ignite)) rgba(255, 77, 45, .55));
-      transform: translateZ(0) scale(calc(.98 + var(--ignite) * .08));
+      transform: translateZ(0) scale(calc((.98 + var(--ignite) * .08) * var(--sigilScale)));
     }
 
     /* Fixed BG layers */
@@ -2221,6 +2222,10 @@ Z
         const y = window.scrollY || window.pageYOffset || 0;
         const p = maxScroll > 0 ? clamp(y / maxScroll) : 0;
 
+const minDim = Math.min(window.innerWidth, window.innerHeight);
+const sigilScale = clamp(minDim / 900, 0.78, 1.18); // tweak bounds if you want
+setVar("--sigilScale", sigilScale.toFixed(4));
+
         // subtle drifting background
         setVar("--bgx", (Math.sin(p * Math.PI * 2) * 20).toFixed(2));
         setVar("--bgy", (Math.cos(p * Math.PI * 2) * 14).toFixed(2));
@@ -2319,17 +2324,26 @@ Z
         sigil.dataset.ignite = igniteSmooth > 0.35 ? "1" : "0";
 
         /* END: starts later + lifts later + expands higher */
-        const endOn = smoothstep(range(p, 0.970, 0.993));
-        const endLiftT = smoothstep(range(p, 0.985, 1.000));
-        const endLift = lerp(0, -260, endLiftT);
+/* ✅ END: responsive lift + expand based on device */
+const endOn = smoothstep(range(p, 0.970, 0.993));
+const endLiftT = smoothstep(range(p, 0.985, 1.000));
 
-        setVar("--endOn", endOn.toFixed(4));
-        setVar("--endLift", endLift.toFixed(2) + "px");
-        endSlate.style.setProperty("--endOn", endOn.toFixed(4));
+// lift scales with viewport height (clamped so it never gets silly)
+const liftMax = -clamp(window.innerHeight * 0.30, 180, 360);
+const endLift = lerp(0, liftMax, endLiftT);
 
-        const expandT = smoothstep(range(p, 0.982, 1.000));
-        const endExpand = lerp(0, 820, expandT);   // ✅ higher expansion
-        setVar("--endExpand", endExpand.toFixed(2) + "px");
+setVar("--endOn", endOn.toFixed(4));
+setVar("--endLift", endLift.toFixed(2) + "px");
+endSlate.style.setProperty("--endOn", endOn.toFixed(4));
+
+const expandT = smoothstep(range(p, 0.982, 1.000));
+
+// expand height scales with viewport height (clamped)
+const expandMax = clamp(window.innerHeight * 0.92, 560, 980);
+const endExpand = lerp(0, expandMax, expandT);
+
+setVar("--endExpand", endExpand.toFixed(2) + "px");
+
       }
 
       // Footer year
